[package]
name = "stellar_sdk"
version = "0.1.2"
edition = "2021"
authors = ["Matin Kaboli <matinkaboli@aol.com>"]
description = "stellar_sdk is a library for working with the Stellar Horizon server"
license = "Apache-2.0"
repository = "https://github.com/matinkaboli/stellar-sdk"
keywords = ["stellar", "sdk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stellar_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
ureq = "2.4.0"
