[package]
name = "stellar_sdk"
version = "0.1.5"
edition = "2021"
authors = ["Matin Kaboli <matinkaboli@aol.com>"]
description = "stellar_sdk is a library for working with the Stellar Horizon server"
license = "Apache-2.0"
repository = "https://github.com/matinkaboli/stellar-sdk"
keywords = ["stellar", "sdk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stellar_sdk"
path = "src/lib.rs"

[features]
default = ["nacl"]
nacl=["dep:nacl"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
ureq = "2.4.0"
anyhow = "1.0.57"
crc = "3.0.0"
byteorder = "1.4.3"
data-encoding = "2.3.2"
nacl = {version="0.5.3", optional=true}
rand = "0.8.4"
toml = "0.5.9"
regex = "1.5.6"
chrono = "0.4.26"
stellar-base = "0.6.0"
sodiumoxide = "0.2.7"
